Kaggle Notebook | notebooka8e4424100 | Version 2

--- a/notebooka8e4424100.ipynb
+++ b/notebooka8e4424100.ipynb
@@ -3,25 +3,25 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "979dd6a6",
+   "id": "b8b5ee90",
    "metadata": {
     "_cell_guid": "aaf249ff-6ab1-4c6a-9fcc-9cf57ef2796a",
     "_uuid": "6d7c92d8-a3d2-4176-9dc2-b52e49a2b1ac",
     "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2023-05-30T15:51:08.838073Z",
-     "iopub.status.busy": "2023-05-30T15:51:08.837470Z",
-     "iopub.status.idle": "2023-05-30T15:51:08.855148Z",
-     "shell.execute_reply": "2023-05-30T15:51:08.854019Z"
+     "iopub.execute_input": "2023-05-30T16:03:56.482766Z",
+     "iopub.status.busy": "2023-05-30T16:03:56.481931Z",
+     "iopub.status.idle": "2023-05-30T16:03:56.499283Z",
+     "shell.execute_reply": "2023-05-30T16:03:56.498062Z"
     },
     "jupyter": {
      "outputs_hidden": false
     },
     "papermill": {
-     "duration": 0.025485,
-     "end_time": "2023-05-30T15:51:08.857866",
+     "duration": 0.02613,
+     "end_time": "2023-05-30T16:03:56.502259",
      "exception": false,
-     "start_time": "2023-05-30T15:51:08.832381",
+     "start_time": "2023-05-30T16:03:56.476129",
      "status": "completed"
     },
     "tags": []
@@ -50,25 +50,21 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ea885d00",
+   "id": "3be9ebd8",
    "metadata": {
     "_cell_guid": "99617572-8177-4202-87da-e7ec39ca917b",
     "_uuid": "f17d0470-b5a2-44cc-949e-7e4a2495ea0c",
-    "collapsed": false,
     "execution": {
-     "iopub.execute_input": "2023-05-30T15:51:08.865106Z",
-     "iopub.status.busy": "2023-05-30T15:51:08.863262Z",
-     "iopub.status.idle": "2023-05-30T15:57:20.051982Z",
-     "shell.execute_reply": "2023-05-30T15:57:20.050390Z"
-    },
-    "jupyter": {
-     "outputs_hidden": false
+     "iopub.execute_input": "2023-05-30T16:03:56.508181Z",
+     "iopub.status.busy": "2023-05-30T16:03:56.507816Z",
+     "iopub.status.idle": "2023-05-30T16:09:32.198199Z",
+     "shell.execute_reply": "2023-05-30T16:09:32.196518Z"
     },
     "papermill": {
-     "duration": 371.19499,
-     "end_time": "2023-05-30T15:57:20.055123",
+     "duration": 335.69661,
+     "end_time": "2023-05-30T16:09:32.201262",
      "exception": false,
-     "start_time": "2023-05-30T15:51:08.860133",
+     "start_time": "2023-05-30T16:03:56.504652",
      "status": "completed"
     },
     "tags": []
@@ -79,23 +75,23 @@
      "output_type": "stream",
      "text": [
       "Get:1 http://packages.cloud.google.com/apt gcsfuse-focal InRelease [5002 B]\r\n",
-      "Get:2 https://packages.cloud.google.com/apt cloud-sdk InRelease [6361 B]\r\n",
-      "Get:3 https://packages.cloud.google.com/apt google-fast-socket InRelease [5015 B]\r\n",
-      "Hit:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\r\n",
-      "Hit:5 http://archive.ubuntu.com/ubuntu jammy InRelease\r\n",
-      "Get:6 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\r\n",
+      "Get:2 http://security.ubuntu.com/ubuntu jammy-security InRelease [110 kB]\r\n",
+      "Get:3 https://packages.cloud.google.com/apt cloud-sdk InRelease [6361 B]\r\n",
+      "Get:4 https://packages.cloud.google.com/apt google-fast-socket InRelease [5015 B]\r\n",
+      "Hit:5 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\r\n",
+      "Hit:6 http://archive.ubuntu.com/ubuntu jammy InRelease\r\n",
       "Get:7 http://archive.ubuntu.com/ubuntu jammy-updates InRelease [119 kB]\r\n",
-      "Get:8 https://packages.cloud.google.com/apt cloud-sdk/main amd64 Packages [445 kB]\r\n",
-      "Get:9 http://archive.ubuntu.com/ubuntu jammy-backports InRelease [108 kB]\r\n",
+      "Get:8 http://security.ubuntu.com/ubuntu jammy-security/universe amd64 Packages [918 kB]\r\n",
+      "Get:9 http://security.ubuntu.com/ubuntu jammy-security/main amd64 Packages [512 kB]\r\n",
       "Get:10 http://security.ubuntu.com/ubuntu jammy-security/restricted amd64 Packages [360 kB]\r\n",
-      "Get:11 http://archive.ubuntu.com/ubuntu jammy-updates/restricted amd64 Packages [360 kB]\r\n",
-      "Get:12 http://security.ubuntu.com/ubuntu jammy-security/universe amd64 Packages [918 kB]\r\n",
-      "Get:13 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1157 kB]\r\n",
-      "Get:14 http://security.ubuntu.com/ubuntu jammy-security/main amd64 Packages [512 kB]\r\n",
-      "Get:15 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [794 kB]\r\n",
-      "Get:16 http://archive.ubuntu.com/ubuntu jammy-backports/main amd64 Packages [49.4 kB]\r\n",
-      "Get:17 http://archive.ubuntu.com/ubuntu jammy-backports/universe amd64 Packages [27.0 kB]\r\n",
-      "Fetched 4975 kB in 2s (2922 kB/s)\r\n",
+      "Get:11 https://packages.cloud.google.com/apt cloud-sdk/main amd64 Packages [445 kB]\r\n",
+      "Get:12 http://archive.ubuntu.com/ubuntu jammy-backports InRelease [108 kB]\r\n",
+      "Get:13 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 Packages [794 kB]\r\n",
+      "Get:14 http://archive.ubuntu.com/ubuntu jammy-updates/restricted amd64 Packages [360 kB]\r\n",
+      "Get:15 http://archive.ubuntu.com/ubuntu jammy-updates/universe amd64 Packages [1157 kB]\r\n",
+      "Get:16 http://archive.ubuntu.com/ubuntu jammy-backports/universe amd64 Packages [27.0 kB]\r\n",
+      "Get:17 http://archive.ubuntu.com/ubuntu jammy-backports/main amd64 Packages [49.4 kB]\r\n",
+      "Fetched 4975 kB in 2s (2797 kB/s)\r\n",
       "\r\n",
       "\r\n",
       "\r\n",
@@ -120,25 +116,25 @@
       "42 upgraded, 0 newly installed, 0 to remove and 4 not upgraded.\r\n",
       "Need to get 244 MB of archives.\r\n",
       "After this operation, 1270 kB disk space will be freed.\r\n",
-      "Get:1 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 dpkg amd64 1.21.1ubuntu2.2 [1239 kB]\r\n",
-      "Get:2 http://packages.cloud.google.com/apt gcsfuse-focal/main amd64 gcsfuse amd64 0.42.5 [14.0 MB]\r\n",
-      "Get:3 https://packages.cloud.google.com/apt cloud-sdk/main amd64 google-cloud-sdk all 432.0.0-0 [154 MB]\r\n",
-      "Get:4 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 ncurses-bin amd64 6.3-2ubuntu0.1 [184 kB]\r\n",
-      "Get:5 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 ncurses-base all 6.3-2ubuntu0.1 [20.2 kB]\r\n",
-      "Get:6 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libk5crypto3 amd64 1.19.2-2ubuntu0.2 [86.3 kB]\r\n",
-      "Get:7 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libkrb5support0 amd64 1.19.2-2ubuntu0.2 [32.3 kB]\r\n",
-      "Get:8 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libkrb5-3 amd64 1.19.2-2ubuntu0.2 [357 kB]\r\n",
-      "Get:9 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libgssapi-krb5-2 amd64 1.19.2-2ubuntu0.2 [145 kB]\r\n",
-      "Get:10 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libncursesw6 amd64 6.3-2ubuntu0.1 [147 kB]\r\n",
-      "Get:11 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libncurses6 amd64 6.3-2ubuntu0.1 [111 kB]\r\n",
-      "Get:12 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libtinfo6 amd64 6.3-2ubuntu0.1 [105 kB]\r\n",
-      "Get:13 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 ca-certificates all 20230311ubuntu0.22.04.1 [155 kB]\r\n",
-      "Get:14 http://security.ubuntu.com/ubuntu jammy-security/main amd64 libssl-dev amd64 3.0.2-0ubuntu1.10 [2372 kB]\r\n",
-      "Get:15 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libctf0 amd64 2.38-4ubuntu2.2 [103 kB]\r\n",
-      "Get:16 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libctf-nobfd0 amd64 2.38-4ubuntu2.2 [107 kB]\r\n",
-      "Get:17 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 binutils-x86-64-linux-gnu amd64 2.38-4ubuntu2.2 [2328 kB]\r\n",
-      "Get:18 http://security.ubuntu.com/ubuntu jammy-security/main amd64 libssl3 amd64 3.0.2-0ubuntu1.10 [1901 kB]\r\n",
-      "Get:19 http://security.ubuntu.com/ubuntu jammy-security/main amd64 openssl amd64 3.0.2-0ubuntu1.10 [1183 kB]\r\n",
+      "Get:1 http://packages.cloud.google.com/apt gcsfuse-focal/main amd64 gcsfuse amd64 0.42.5 [14.0 MB]\r\n",
+      "Get:2 https://packages.cloud.google.com/apt cloud-sdk/main amd64 google-cloud-sdk all 432.0.0-0 [154 MB]\r\n",
+      "Get:3 http://security.ubuntu.com/ubuntu jammy-security/main amd64 libssl-dev amd64 3.0.2-0ubuntu1.10 [2372 kB]\r\n",
+      "Get:4 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 dpkg amd64 1.21.1ubuntu2.2 [1239 kB]\r\n",
+      "Get:5 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 ncurses-bin amd64 6.3-2ubuntu0.1 [184 kB]\r\n",
+      "Get:6 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 ncurses-base all 6.3-2ubuntu0.1 [20.2 kB]\r\n",
+      "Get:7 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libk5crypto3 amd64 1.19.2-2ubuntu0.2 [86.3 kB]\r\n",
+      "Get:8 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libkrb5support0 amd64 1.19.2-2ubuntu0.2 [32.3 kB]\r\n",
+      "Get:9 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libkrb5-3 amd64 1.19.2-2ubuntu0.2 [357 kB]\r\n",
+      "Get:10 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libgssapi-krb5-2 amd64 1.19.2-2ubuntu0.2 [145 kB]\r\n",
+      "Get:11 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libncursesw6 amd64 6.3-2ubuntu0.1 [147 kB]\r\n",
+      "Get:12 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libncurses6 amd64 6.3-2ubuntu0.1 [111 kB]\r\n",
+      "Get:13 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libtinfo6 amd64 6.3-2ubuntu0.1 [105 kB]\r\n",
+      "Get:14 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 ca-certificates all 20230311ubuntu0.22.04.1 [155 kB]\r\n",
+      "Get:15 http://security.ubuntu.com/ubuntu jammy-security/main amd64 libssl3 amd64 3.0.2-0ubuntu1.10 [1901 kB]\r\n",
+      "Get:16 http://security.ubuntu.com/ubuntu jammy-security/main amd64 openssl amd64 3.0.2-0ubuntu1.10 [1183 kB]\r\n",
+      "Get:17 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libctf0 amd64 2.38-4ubuntu2.2 [103 kB]\r\n",
+      "Get:18 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libctf-nobfd0 amd64 2.38-4ubuntu2.2 [107 kB]\r\n",
+      "Get:19 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 binutils-x86-64-linux-gnu amd64 2.38-4ubuntu2.2 [2328 kB]\r\n",
       "Get:20 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 libbinutils amd64 2.38-4ubuntu2.2 [660 kB]\r\n",
       "Get:21 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 binutils amd64 2.38-4ubuntu2.2 [3186 B]\r\n",
       "Get:22 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 binutils-common amd64 2.38-4ubuntu2.2 [222 kB]\r\n",
@@ -162,7 +158,7 @@
       "Get:40 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 linux-libc-dev amd64 5.15.0-72.79 [1331 kB]\r\n",
       "Get:41 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 software-properties-common all 0.99.22.7 [14.1 kB]\r\n",
       "Get:42 http://archive.ubuntu.com/ubuntu jammy-updates/main amd64 python3-software-properties all 0.99.22.7 [28.8 kB]\r\n",
-      "Fetched 244 MB in 5s (51.6 MB/s)\r\n",
+      "Fetched 244 MB in 6s (44.1 MB/s)\r\n",
       "Extracting templates from packages: 100%\r\n",
       "Preconfiguring packages ...\r\n",
       "\n",
@@ -344,7 +340,7 @@
       "Get:6 http://archive.ubuntu.com/ubuntu jammy/universe amd64 libpython2-stdlib amd64 2.7.18-3 [7432 B]\r\n",
       "Get:7 http://archive.ubuntu.com/ubuntu jammy/universe amd64 python2 amd64 2.7.18-3 [9098 B]\r\n",
       "Get:8 http://archive.ubuntu.com/ubuntu jammy/main amd64 iputils-ping amd64 3:20211215-1 [42.9 kB]\r\n",
-      "Fetched 4048 kB in 1s (4090 kB/s)\r\n",
+      "Fetched 4048 kB in 0s (26.0 MB/s)\r\n",
       "\n",
       "\u001b7\u001b[0;23r\u001b8\u001b[1ASelecting previously unselected package libpython2.7-minimal:amd64.\r\n",
       "(Reading database ... 115547 files and directories currently installed.)\r\n",
@@ -387,7 +383,7 @@
       "warning: redirecting to https://github.com/4L13199/LITEDDOS/\r\n",
       "remote: Enumerating objects: 8, done.\u001b[K\r\n",
       "remote: Total 8 (delta 0), reused 0 (delta 0), pack-reused 8\u001b[K\r\n",
-      "Receiving objects: 100% (8/8), 6.66 KiB | 1.33 MiB/s, done.\r\n",
+      "Receiving objects: 100% (8/8), 6.66 KiB | 1.67 MiB/s, done.\r\n",
       "Resolving deltas: 100% (1/1), done.\r\n"
      ]
     }
@@ -396,6 +392,47 @@
     "!sudo apt update && sudo apt upgrade -y && sudo apt install git iputils-ping curl python2 -y\n",
     "!git clone http:/\\/github.com/4L13199/LITEDDOS\n",
     "!cd LITEDDOS && chmod -R 777 *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d1949859",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2023-05-30T16:09:32.264474Z",
+     "iopub.status.busy": "2023-05-30T16:09:32.263295Z",
+     "iopub.status.idle": "2023-05-30T16:09:34.555491Z",
+     "shell.execute_reply": "2023-05-30T16:09:34.552329Z"
+    },
+    "papermill": {
+     "duration": 2.330628,
+     "end_time": "2023-05-30T16:09:34.562329",
+     "exception": false,
+     "start_time": "2023-05-30T16:09:32.231701",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ping: victim: Name or service not known\r\n",
+      "4\r\n",
+      "Traceback (most recent call last):\r\n",
+      "  File \"LITEDDOS.py\", line 46, in <module>\r\n",
+      "    main()\r\n",
+      "  File \"LITEDDOS.py\", line 43, in main\r\n",
+      "    flood(sys.argv[1], int(sys.argv[2]), int(sys.argv[3]))\r\n",
+      "ValueError: invalid literal for int() with base 10: 'port'\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!ping victim\n",
+    "!cd LITEDDOS && python2 L*py victimip port ping"
    ]
   }
  ],
@@ -419,14 +456,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 385.584841,
-   "end_time": "2023-05-30T15:57:21.113908",
+   "duration": 351.432092,
+   "end_time": "2023-05-30T16:09:35.829593",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2023-05-30T15:50:55.529067",
+   "start_time": "2023-05-30T16:03:44.397501",
    "version": "2.4.0"
   }
  },
